packages/web/src/pages/ResultsPage/ResultsPage.module.css
/* ... */
.cityDetails {
  display: flex;
}

/*Index */
/* ResultsPage.module.css */

.myLocationsList {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5px;
}

.btnPreferences {
  position: relative;
  padding: 0.5rem 1rem;
  transition: background-color 0.2s;
  background-color: transparent;
  color: #01697c;
  border: none;
  border-radius: 0;
  margin-bottom: 15px;
  border-radius: 4px;
  height: 40px;
  width: 200px;
  margin: auto;
}

.btnPreferences::after {
  content: "";
  position: absolute;
  bottom: -5px;
  left: 50%;

  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid #01697c;
}

.cityContainer {
  align-items: center;
  justify-content: space-between;
  width: 100%;
  max-width: 1200px;
  background-color: #ffffff;
  border-radius: 15px;
  position: relative;
  text-decoration: none;
  margin-bottom: 20px;
}

.resultsPage {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}

.myLocationsBox {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  width: 100%;
  max-width: 1200px;
  padding: 20px;
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
  position: relative;
  text-decoration: none;
  border: 1px solid #e1e4e8;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

.cityImage {
  height: 200px;
  width: 330px;
  object-fit: cover;
  border-radius: 15px;
  margin-top: 20px;
}

.cityImage:hover {
  transform: scale(1.05);
  transition: transform 0.3s ease-in-out;
}

a,
a:visited,
a:hover {
  color: inherit;
  text-decoration: none;
}

.text,
.text:visited,
.text:hover {
  color: inherit;
  text-decoration: none;
}

a:focus,
a:active {
  outline: none;
}

.mapCard {
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  background-color: white;
  width: 100%;
  height: auto;
  padding: 15px;
  margin-left: 0px !important;
  margin-right: 0px !important;
  text-align: center;
  display: flex;
  justify-content: center;
}

@media screen and (min-width: 768px) {
  .myLocationsBox {
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 1200px;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
    position: relative;
    text-decoration: none;
    border: 1px solid #e1e4e8;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  }

  .cityImage {
    height: 250px;
    width: 400px;
    object-fit: cover;
    border-radius: 15px;
  }

  .resultsPage,
  .myLocationsList {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 50px;
  }
}

@media (min-width: 1600px) {
  .resultsPage,
  .myLocationsList {
    grid-template-columns: repeat(3, 1fr);
  }
}

.header {
  color: black;
  font-size: 20px;
  margin-bottom: 0px;
}

.myLocationsHeader {
  color: black;
  font-size: 22px;
  margin-bottom: 5px;
  margin-top: 5px;
}

.cityContainer h2 {
  margin-bottom: 15px;
  color: #333;
  text-align: center;
  align-items: center;
}

.ranking {
  font-size: 20px;
  color: black;
  margin-right: 15px;
}
.chartContainer {
  width: 100%;
  max-width: 600px;
  margin: 20px;
  padding: 15px;
  background-color: #f9f9f9;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.card {
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  background-color: white;
  width: 100%;
  height: auto;
  padding: 15px;
  text-align: center;
  margin-bottom: 40px;
}

.cardHeader {
  background-color: transparent;
}

.tableContainer {
  width: 100%;
  max-width: 800px;
  margin: 20px;
  overflow-x: auto;
}

.mapContainer {
  width: 96%;
  height: 100%;
  margin: auto;
  margin-bottom: 50px;
  background-color: #e5e5e5;
  border-radius: 8px;
}

.myLocationsMapContainer {
  width: 100%;
  margin-top: 30px;
  background-color: #e5e5e5;
  border-radius: 8px;
}

.graphContainer {
  width: 100%;
  max-width: 600px;
  margin: 20px;
  padding: 15px;
  background-color: #f9f9f9;
  border-radius: 8px;
}

.cityInfo {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin-top: 20px;
}

.cityInfoCard {
  flex-basis: 45%;
  margin: 10px;
  padding: 20px;
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.pageTitle {
  font-size: 24px;
  color: #333;
  text-align: center;
  margin: 20px 0;
}

.button {
  padding: 10px 20px;
  background-color: #007bff;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.mt-20 {
  margin-top: 20px;
}
.mb-20 {
  margin-bottom: 20px;
}
.pt-20 {
  padding-top: 20px;
}
.pb-20 {
  padding-bottom: 20px;
}

.heartButton,
.heartButton:focus,
.heartButton:hover {
  color: white;
  border: none;
  cursor: pointer;
  position: absolute;
  top: 40px;
  right: 20px;
  outline: none;
  margin: 5px;
  z-index: 1000;
}

.myLocationsHeartButton,
.myLocationsHeartButton:focus,
.myLocationsHeartButton:hover {
  background: none;
  border: none;
  cursor: pointer;
  position: absolute;
  top: 22px;
  right: 10px;
  outline: none;
  font-size: 18px;
  color: red;
  margin: 5px;
}

/* Responsive design */
@media (max-width: 768px) {
  .cityInfoCard {
    flex-basis: 100%;
  }

  .chartContainer,
  .graphContainer {
    max-width: 100%;
  }
}

/* MyLocationsPage specific*/

.myLocationsContainer {
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 50px;
  height: 100%;
}

@media screen and (min-width: 1000px) {
  .myLocationsContainer {
    width: 70%;
    margin: auto;
    height: 100%;
  }
}
/* ... */

